--- a/public/popup/popup.html
+++ b/public/popup/popup.html
@@ -1,6 +1,6 @@
 <html>
-    <body>
-        <h1 id="count">POPUP</h1>
+    <body style="min-width: 200px;">
+        <div id="root"></div>
     </body>
     <script src="../js/popup.js"></script>
 </html>
